--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,29 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+}
+
+th,
+td {
+    text-align: center;
+    padding: 16px;
+}
+
+th {
+    background-color: orange;
+    color: white;
+ }
+  
+ tr:nth-child(even) {
+    background-color: #d2d2d2;
+ }
+ 
+
 .flex-container-column {
     display: flex;
     flex-direction: column;
@@ -41,7 +64,7 @@ body {
 
 .button:hover {
     font-weight: bolder;
- }
+}
 
 .display {
     color: white;
@@ -65,14 +88,26 @@ body {
     margin-top: 20px;
 }
 
+.history {
+    width: 80%;
+    margin: 30px auto 0 auto;
+    overflow: scroll;
+}
+
 @media screen and (max-width: 513px) {
     .button {
         padding: 10px;
     }
- }
+    .history {
+        width: 100%;
+    }
+}
 
- @media screen and (max-width: 320px) {
+@media screen and (max-width: 320px) {
     .button {
         padding: 4px;
     }
- }
+    .history {
+        width: 100%;
+    }
+}
